# pascalc

./: README.md  dune-project  pascalc.opam
examples/: Step18_full.pas  step01_assign.pas  step01_writeln.pas  step02_var.pas  step03_unary.pas  step04_if.pas  step05_nested_block.pas  step06_while.pas  step07_boolean.pas  step08_logic.pas  step10_for.pas  step11_repeat.pas  step12_mod.pas  step13_array.pas  step14_procedure.pas  step15_function.pas  step16_recursion.pas  step17_record.pas
lib/: dune
lib/fe/: ast.ml  dune  interp.ml  lexer.mll  parser.mly
test/: dune
